# ChubbyFireBot

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
monitors/: mod_queue.py  new_posts.py
src/: claude_session.py  decision_logger.py  discord_bot.py  main.py  reddit_client.py
tests/: conftest.py
tests/unit/: test_claude_session.py  test_decision_logger.py  test_discord_bot.py  test_monitors.py  test_reddit_client.py
